Fix align issues

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -1,5 +1,6 @@
 .wp-block-afca-blocks-meta-field {
 	display: flex;
+	align-items: center;
 
 	.before-text {
 		margin-right: 4px;
