--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 .afca-blocks-meta-field {
 	display: flex;
+	align-items: center;
 
 	.before-text {
 		margin-right: 4px;
